--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,11 +39,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import statsmodels\n",
+    "from statsmodels.tsa import stattools\n",
     "from statsmodels.tsa.arima_model import ARIMA\n",
     "from statsmodels.tsa.arima_process import arma_generate_sample\n",
     "np.random.seed(3)\n",
     "\n",
-    "from statsmodels.tsa import stattools\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import itermplot\n",
     "%matplotlib inline\n",
@@ -565,7 +566,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20378017080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1cf44cdec88>"
       ]
      },
      "execution_count": 9,
@@ -598,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,16 +608,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2037ca05160>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1cf480f7a58>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -674,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -732,16 +733,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Auto Correlation Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_acf = pd.DataFrame(stattools.acf(df_temp.dropna(), fft=True))"
+    "## KPSS Test\n",
+    "\n",
+    "https://www.statsmodels.org/stable/generated/statsmodels.tsa.stattools.kpss.html#statsmodels.tsa.stattools.kpss\n",
+    "\n",
+    "> Null Hypothesis (H0): Computes the Kwiatkowski-Phillips-Schmidt-Shin (KPSS) test for the null hypothesis that x is level or trend stationary.\n",
+    "\n",
+    "**kpss_stat**: `float`\n",
+    "\n",
+    "The KPSS test statistic\n",
+    "\n",
+    "**p_value**: `float`\n",
+    "\n",
+    "The p-value of the test. The p-value is interpolated from Table 1 in Kwiatkowski et al. (1992), and a boundary point is returned if the test statistic is outside the table of critical values, that is, if the p-value is outside the interval (0.01, 0.1).\n",
+    "\n",
+    "**lags**: `int`\n",
+    "\n",
+    "The truncation lag parameter\n",
+    "\n",
+    "**crit**: `dict`\n",
+    "\n",
+    "The critical values at 10%, 5%, 2.5% and 1%. Based on Kwiatkowski et al. (1992).\n"
    ]
   },
   {
@@ -750,12 +762,100 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEMPERATURE\n",
+      "p-value: 0.1\n",
+      "Could not reject H0. It is likely stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\jpeak\\projects\\temperature-timeseries\\.venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:1711: InterpolationWarning: p-value is greater than the indicated p-value\n",
+      "  warn(\"p-value is greater than the indicated p-value\", InterpolationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"TEMPERATURE\")\n",
+    "results = stattools.kpss(df_temp['value'], regression='ct', lags='auto')\n",
+    "\n",
+    "kpss_stat, pvalue, lags, critical_values = results\n",
+    "\n",
+    "print(f\"p-value: {pvalue}\")\n",
+    "if pvalue < 0.05:\n",
+    "    print(\"Reject H0. Reject stationary. It could be non-stationary.\")\n",
+    "else:\n",
+    "    print(\"Could not reject H0. It is likely stationary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIFFERENCED\n",
+      "p-value: 0.1\n",
+      "Could not reject H0. It is likely stationary.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\jpeak\\projects\\temperature-timeseries\\.venv\\lib\\site-packages\\statsmodels\\tsa\\stattools.py:1711: InterpolationWarning: p-value is greater than the indicated p-value\n",
+      "  warn(\"p-value is greater than the indicated p-value\", InterpolationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"DIFFERENCED\")\n",
+    "results = stattools.kpss(df_diff['value'], regression='ct', lags='auto')\n",
+    "\n",
+    "kpss_stat, pvalue, lags, critical_values = results\n",
+    "\n",
+    "print(f\"p-value: {pvalue}\")\n",
+    "if pvalue < 0.05:\n",
+    "    print(\"Reject H0. Reject stationary. It could be non-stationary.\")\n",
+    "else:\n",
+    "    print(\"Could not reject H0. It is likely stationary.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Auto Correlation Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_acf = pd.DataFrame(stattools.acf(df_temp.dropna(), fft=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2037898fc88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1cf4c1f91d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -778,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,16 +887,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2037c99e048>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1cf4c268da0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -819,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +985,7 @@
        "5 -0.085320"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,27 +1027,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DatetimeIndex(['2019-09-22 07:00:00', '2019-09-22 08:00:00',\n",
-       "               '2019-09-22 09:00:00', '2019-09-22 10:00:00',\n",
-       "               '2019-09-22 11:00:00', '2019-09-22 12:00:00',\n",
-       "               '2019-09-22 13:00:00', '2019-09-22 14:00:00',\n",
-       "               '2019-09-22 15:00:00', '2019-09-22 16:00:00',\n",
+       "DatetimeIndex(['2019-10-02 05:00:00', '2019-10-02 06:00:00',\n",
+       "               '2019-10-02 07:00:00', '2019-10-02 08:00:00',\n",
+       "               '2019-10-02 09:00:00', '2019-10-02 10:00:00',\n",
+       "               '2019-10-02 11:00:00', '2019-10-02 12:00:00',\n",
+       "               '2019-10-02 13:00:00', '2019-10-02 14:00:00',\n",
        "               ...\n",
-       "               '2019-11-26 01:00:00', '2019-11-26 02:00:00',\n",
-       "               '2019-11-26 03:00:00', '2019-11-26 04:00:00',\n",
-       "               '2019-11-26 05:00:00', '2019-11-26 06:00:00',\n",
-       "               '2019-11-26 07:00:00', '2019-11-26 08:00:00',\n",
-       "               '2019-11-26 09:00:00', '2019-11-26 10:00:00'],\n",
-       "              dtype='datetime64[ns]', name='ts', length=1564, freq='H')"
+       "               '2019-10-08 20:00:00', '2019-10-08 21:00:00',\n",
+       "               '2019-10-08 22:00:00', '2019-10-08 23:00:00',\n",
+       "               '2019-10-09 00:00:00', '2019-10-09 01:00:00',\n",
+       "               '2019-10-09 02:00:00', '2019-10-09 03:00:00',\n",
+       "               '2019-10-09 04:00:00', '2019-10-09 05:00:00'],\n",
+       "              dtype='datetime64[ns]', name='ts', length=169, freq='H')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1088,7 @@
        "  <th>Date:</th>          <td>Wed, 27 Nov 2019</td> <th>  AIC                </th> <td>-58.083</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>14:24:49</td>     <th>  BIC                </th> <td>-42.463</td>\n",
+       "  <th>Time:</th>              <td>15:10:22</td>     <th>  BIC                </th> <td>-42.463</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>           <td>10-02-2019</td>    <th>  HQIC               </th> <td>-51.743</td>\n",
@@ -1039,7 +1139,7 @@
        "Model:                 ARIMA(2, 1, 1)   Log Likelihood                  34.041\n",
        "Method:                       css-mle   S.D. of innovations              0.196\n",
        "Date:                Wed, 27 Nov 2019   AIC                            -58.083\n",
-       "Time:                        14:24:49   BIC                            -42.463\n",
+       "Time:                        15:10:22   BIC                            -42.463\n",
        "Sample:                    10-02-2019   HQIC                           -51.743\n",
        "                         - 10-09-2019                                         \n",
        "=================================================================================\n",
@@ -1060,7 +1160,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
